--- a/puppeteer/.puppeteer.yml
+++ b/puppeteer/.puppeteer.yml
@@ -8,4 +8,4 @@ ansible_config:
   defaults:
     host_key_checking: False
     callback_whitelist: profile_tasks
-    roles_path: '/etc/ansible/roles'
+    roles_path: /etc/ansible/roles
