--- a/puppeteer/.puppeteer.yml
+++ b/puppeteer/.puppeteer.yml
@@ -7,5 +7,8 @@ environments:
 ansible_config:
   defaults:
     host_key_checking: False
-    callback_whitelist: profile_tasks
-    roles_path: /etc/ansible/roles
+    callback_whitelist: 'profile_tasks'
+    roles_path: 'roles'
+  ssh_connection:
+    pipelining: True
+    control_path: '/tmp/ansible-ssh-%%h-%%p-%%r'
